[package]
name = "console_test_app_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "btree"
path = "src/lib.rs"

[profile.release]
debug = true

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
anyhow = "1.0.89"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "btree_benchmark"
harness = false