[package]
name = "bst_testing"
version = "0.1.0"
edition = "2021"

[lib]
name = "bst"
path = "src/lib.rs"

[profile.release]
debug = true
lto = false
#codegen-units = 1
#panic = "abort"
opt-level = 1

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
anyhow = "1.0.89"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bst_benchmark"
harness = false