[package]
name = "bst_testing"
version = "0.1.0"
edition = "2021"

[lib]
name = "bst"
path = "src/lib.rs"

[profile.release]
debug = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.release-performance]
inherits = "release"
# Maximum Link Time Optimization for best performance
lto = "fat"
# Single codegen unit maximizes optimization opportunities
codegen-units = 1
# Keep debug symbols for profiling capabilities
strip = "none"
# Use unwinding for better error handling without sacrificing much performance
panic = "unwind"
# Disable incremental compilation for maximum optimization
incremental = false
# Maximum optimization for speed
opt-level = 3
# Include minimal debug info for better profiling without much size impact
debug = 1
# Enable more aggressive optimizations
overflow-checks = false

# Optimize dependencies with the same settings
[profile.release-performance.package."*"]
opt-level = 3
codegen-units = 1
debug = 1

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
anyhow = "1.0.89"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bst_benchmark"
harness = false